# cmake-practice

./: .gitmodules  README.md
cutlass/: CMakeLists.txt  main.cpp
cutlass-2/: CMakeLists.txt  main.cpp
cutlass-2/lib/: CMakeLists.txt  kernels_cutlass.cu  kernels_dx.cu
cutlass-2/lib/include/: kernels_cutlass.cuh  kernels_dx.cuh
cutlass/lib/: CMakeLists.txt  CublasDx.cuh  Cutlass.cuh  Kernels.cuh  cublas_dx.cu  kernels.cu
tutorial/step_1/: CMakeLists.txt  README.md  TutorialConfig.h.in  main.cpp
tutorial/step_2/: CMakeLists.txt  README.md  tutorial.cxx
tutorial/step_2/MathFunctions/: CMakeLists.txt  MathFunctions.cxx
tutorial/step_3/: CMakeLists.txt  README.md
tutorial/step_3/MathFunctions/: CMakeLists.txt
tutorial/step_4/: CMakeLists.txt  README.md
